--- a/02-starting-project/src/components/CourseGoals/CourseInput/CourseInput.css
+++ b/02-starting-project/src/components/CourseGoals/CourseInput/CourseInput.css
@@ -17,6 +17,15 @@
   padding: 0 0.25rem;
 }
 
+.form-control.invalid input {
+  border-color: red;
+  background: salmon;
+}
+
+.form-control.invalid label {
+  color: red;
+}
+
 .form-control input:focus {
   outline: none;
   background: #fad0ec;
